🐛 fix: sliders overflow-y hidden

--- a/src/scss/about/community-slider.scss
+++ b/src/scss/about/community-slider.scss
@@ -14,6 +14,7 @@
       padding: 0 0 0 27px;
       height: 302px;
       overflow-x: scroll;
+      overflow-y: hidden;
       flex-wrap: wrap;
 
       a {
