--- a/src/scss/products/_product-slider.scss
+++ b/src/scss/products/_product-slider.scss
@@ -14,6 +14,7 @@
       flex-wrap: nowrap;
       padding: 0 0 0 27px;
       overflow-x: scroll;
+      overflow-y: hidden;
     }
 
     .product-slider-bar {
